added procs and buffs, added ability to choose stats and restart sim

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,8 +5,9 @@
         "removeComments": true,
         "preserveConstEnums": true,
         "sourceMap": true,
-        "target": "es2016",
-        "outDir": "js"
+        "target": "es2017",
+        "outDir": "js",
+        "strict": true
     },
     "include": [
         "src/*"
